chore: moves a few deps from devDependencies to dependencies proper

--- a/packages/i18next-codemod/package.json
+++ b/packages/i18next-codemod/package.json
@@ -35,12 +35,11 @@
     "test": "vitest"
   },
   "devDependencies": {
-    "@prettier/sync": "^0.5.2",
-    "@types/jscodeshift": "^17.3.0",
-    "jscodeshift": "^17.3.0",
-    "ts-morph": "^26.0.0"
+    "@prettier/sync": "^0.5.5",
+    "@types/jscodeshift": "^17.3.0"
   },
   "dependencies": {
-    "ast-types": "0.16.1"
+    "ast-types": "0.16.1",
+    "jscodeshift": "^17.3.0"
   }
 }
