--- a/packages/i18next-codemod/package.json
+++ b/packages/i18next-codemod/package.json
@@ -36,10 +36,10 @@
   },
   "devDependencies": {
     "@prettier/sync": "^0.5.5",
-    "@types/jscodeshift": "^17.3.0"
+    "@types/jscodeshift": "^17.3.0",
+    "ast-types": "0.16.1"
   },
   "dependencies": {
-    "ast-types": "0.16.1",
     "jscodeshift": "^17.3.0"
   }
 }
