--- a/packages/i18next-vite-plugin/package.json
+++ b/packages/i18next-vite-plugin/package.json
@@ -1,17 +1,22 @@
-export default {
-  "name": "i18next-codemod",
+{
+  "name": "i18next-vite-plugin",
   "type": "module",
   "version": "0.0.0",
   "private": false,
   "description": "",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/traversable/schema.git",
+    "directory": "packages/"
+  },
+  "bugs": {
+    "url": "https://github.com/traversable/schema/issues",
+    "email": "ahrjarrett@gmail.com"
+  },
   "i18next-codemod": {
-    "generateExports": {
-      "include": ["**/*.ts"]
-    },
-    "generateIndex": {
-      "include": ["**/*.ts"]
-    }
+    "generateExports": { "include": ["**/*.ts"] },
+    "generateIndex": { "include": ["**/*.ts"] }
   },
   "publishConfig": {
     "access": "public",
@@ -30,12 +35,6 @@ export default {
     "clean:deps": "rm -rf node_modules",
     "test": "vitest"
   },
-  "devDependencies": {
-    "@prettier/sync": "^0.5.5",
-    "@types/jscodeshift": "^17.3.0",
-    "ast-types": "0.16.1"
-  },
-  "dependencies": {
-    "jscodeshift": "^17.3.0"
-  }
-} as const
+  "peerDependencies": {},
+  "devDependencies": {}
+}
