--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "./tsconfig.base.json",
   "include": [],
-  "references": []
+  "references": [
+    { "path": "packages/i18next-codemod" },
+    { "path": "packages/i18next-vite-plugin" }
+  ]
 }
