--- a/packages/i18next-vite-plugin/package.json
+++ b/packages/i18next-vite-plugin/package.json
@@ -15,8 +15,16 @@
     "email": "ahrjarrett@gmail.com"
   },
   "i18next-codemod": {
-    "generateExports": { "include": ["**/*.ts"] },
-    "generateIndex": { "include": ["**/*.ts"] }
+    "generateExports": {
+      "include": [
+        "**/*.ts"
+      ]
+    },
+    "generateIndex": {
+      "include": [
+        "**/*.ts"
+      ]
+    }
   },
   "publishConfig": {
     "access": "public",
@@ -35,6 +43,9 @@
     "clean:deps": "rm -rf node_modules",
     "test": "vitest"
   },
-  "peerDependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "@prettier/sync": "^0.6.1",
+    "@traversable/json": "^0.0.25",
+    "@traversable/registry": "^0.0.24"
+  }
 }
