build: restructure monorepo for publishing

--- a/bin/package.json
+++ b/bin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "i18next-codemod-bin",
+  "name": "i18next-selector-bin",
   "type": "module",
   "private": true,
   "dependencies": {
