--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "bench": "pnpm bench:types && pnpm bench:runtime",
-    "bench:runtime": "./bin/bench.ts run",
-    "bench:types": "./bin/bench.ts prepareTypes && ./bin/bench.ts runTypes && ./bin/bench.ts cleanupTypes",
     "boot": "pnpm install && pnpm reboot",
     "build": "pnpm build:root && pnpm run build:pre && pnpm --recursive --parallel run build && pnpm build:post",
     "build:docs": "pnpm dlx tsx ./bin/docs.ts",
     "build:pre": "pnpm dlx tsx ./bin/bump.ts",
-    "build:pkgs": "pnpm --filter \"i18next-codemod/*\" run \"/^build:.*/\"",
+    "build:pkgs": "pnpm --filter \"@i18next-selector/*\" run \"/^build:.*/\"",
     "build:root": "tsc -b tsconfig.build.json && pnpm run build:docs",
     "build:post": "pnpm circular",
     "build:dist": "pnpm dlx tsx ./bin/pack.ts",
