--- a/packages/codemod/package.json
+++ b/packages/codemod/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "i18next-codemod",
+  "name": "@i18next-selector/codemod",
   "type": "module",
   "version": "0.0.0",
   "private": false,
   "description": "",
   "license": "MIT",
-  "i18next-codemod": {
+  "@i18next-selector": {
     "generateExports": {
       "include": [
         "**/*.ts"
