--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.base.json",
   "include": [],
   "references": [
-    { "path": "packages/i18next-codemod" },
-    { "path": "packages/i18next-vite-plugin" }
+    { "path": "packages/codemod" },
+    { "path": "packages/vite-plugin" }
   ]
 }
