debug(codemod): adds `bin` script

--- a/packages/codemod/package.json
+++ b/packages/codemod/package.json
@@ -5,6 +5,7 @@
   "private": false,
   "description": "",
   "license": "MIT",
+  "bin": "dist/dist/cjs/bin.js",
   "@i18next-selector": {
     "generateExports": {
       "include": [
