--- a/packages/codemod/package.json
+++ b/packages/codemod/package.json
@@ -5,7 +5,9 @@
   "private": false,
   "description": "",
   "license": "MIT",
-  "bin": "dist/dist/cjs/bin.js",
+  "bin": {
+    "@i18next-selector/codemod": "./dist/cjs/bin.js"
+  },
   "@i18next-selector": {
     "generateExports": {
       "include": [
