--- a/packages/codemod/package.json
+++ b/packages/codemod/package.json
@@ -6,7 +6,7 @@
   "description": "",
   "license": "MIT",
   "bin": {
-    "@i18next-selector/codemod": "./dist/cjs/bin.js"
+    "i18next-selector-codemod": "./dist/cjs/bin.js"
   },
   "@i18next-selector": {
     "generateExports": {
@@ -31,6 +31,7 @@
     "build:annotate": "babel build --plugins annotate-pure-calls --out-dir build --source-maps",
     "build:esm": "tsc -b tsconfig.build.json",
     "build:cjs": "babel build/esm --plugins @babel/transform-export-namespace-from --plugins @babel/transform-modules-commonjs --out-dir build/cjs --source-maps",
+    "build:dist": "chmod +x dist/dist/cjs/bin.js",
     "check": "tsc -b tsconfig.json",
     "clean": "pnpm run \"/^clean:.*/\"",
     "clean:build": "rm -rf .tsbuildinfo dist build",
