--- a/packages/codemod/package.json
+++ b/packages/codemod/package.json
@@ -6,7 +6,8 @@
   "description": "",
   "license": "MIT",
   "bin": {
-    "i18next-selector-codemod": "./dist/cjs/bin.js"
+    "i18next-selector-codemod": "./dist/cjs/bin.js",
+    "__i18next-selector-codemod__": "./src/bin.ts"
   },
   "@i18next-selector": {
     "generateExports": {
@@ -41,9 +42,11 @@
   "devDependencies": {
     "@prettier/sync": "^0.5.5",
     "@types/jscodeshift": "^17.3.0",
+    "@types/yargs": "^17.0.33",
     "ast-types": "0.16.1"
   },
   "dependencies": {
-    "jscodeshift": "^17.3.0"
+    "jscodeshift": "^17.3.0",
+    "yargs": "^18.0.0"
   }
 }
