--- a/packages/codemod/package.json
+++ b/packages/codemod/package.json
@@ -6,7 +6,7 @@
   "description": "",
   "license": "MIT",
   "bin": {
-    "i18next-selector-codemod": "./dist/cjs/bin.js",
+    "i18next-selector-codemod": "./dist/src/bin.ts",
     "__i18next-selector-codemod__": "./src/bin.ts"
   },
   "@i18next-selector": {
