--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -43,10 +43,13 @@
     "clean:deps": "rm -rf node_modules",
     "test": "vitest"
   },
+  "devDependencies": {
+    "vite": "catalog:"
+  },
   "dependencies": {
     "@prettier/sync": "^0.6.1",
     "@traversable/json": "^0.0.26",
-    "@traversable/registry": "^0.0.25"
+    "@traversable/registry": "^0.0.25",
   },
   "peerDependencies": {
     "vite": "6 - 7"
