fix(vite-plugin): typo in package.json file

--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -49,7 +49,7 @@
   "dependencies": {
     "@prettier/sync": "^0.6.1",
     "@traversable/json": "^0.0.26",
-    "@traversable/registry": "^0.0.25",
+    "@traversable/registry": "^0.0.25"
   },
   "peerDependencies": {
     "vite": "6 - 7"
