--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -44,7 +44,7 @@
     "test": "vitest"
   },
   "devDependencies": {
-    "vite": "catalog:"
+    "vite": "^6.3.5"
   },
   "dependencies": {
     "@prettier/sync": "^0.6.1",
