--- a/packages/codemod/package.json
+++ b/packages/codemod/package.json
@@ -41,14 +41,12 @@
   "devDependencies": {
     "@prettier/sync": "^0.5.5",
     "@types/jscodeshift": "^17.3.0",
-    "@types/yargs": "^17.0.33",
     "ast-types": "0.16.1"
   },
   "dependencies": {
     "@effect/cli": "^0.38.2",
     "@effect/platform-node": "^0.54.3",
     "effect": "^3.10.14",
-    "jscodeshift": "^17.3.0",
-    "yargs": "^18.0.0"
+    "jscodeshift": "^17.3.0"
   }
 }
