--- a/packages/codemod/package.json
+++ b/packages/codemod/package.json
@@ -45,7 +45,11 @@
   },
   "dependencies": {
     "@effect/cli": "^0.38.2",
+    "@effect/platform": "^0.87.1",
     "@effect/platform-node": "^0.54.3",
+    "@effect/printer-ansi": "^0.44.10",
+    "@effect/schema": "^0.75.5",
+    "@effect/typeclass": "^0.35.10",
     "effect": "^3.10.14",
     "jscodeshift": "^17.3.0"
   }
