--- a/packages/codemod/package.json
+++ b/packages/codemod/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@i18next-selector/codemod",
+  "name": "i18next-selector-codemod",
   "type": "module",
-  "version": "0.0.10",
+  "version": "0.0.0",
   "private": false,
   "description": "",
   "license": "MIT",
