--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install node
         uses: actions/setup-node@v4
         with:
-          node-version-file: .node-version
+          node-version: '22.13.1'
           cache: pnpm
       - name: Install dependencies
         run: pnpm install
