--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -44,6 +44,7 @@
     "test": "vitest"
   },
   "devDependencies": {
+    "@prettier/sync": "^0.6.1",
     "vite": "^6.3.5"
   },
   "dependencies": {
