fix(codemod,vite-plugin): adds `repository` field to manifest files

--- a/packages/codemod/package.json
+++ b/packages/codemod/package.json
@@ -5,6 +5,11 @@
   "private": false,
   "description": "",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ahrjarrett/i18next-selector.git",
+    "directory": "packages/codemod"
+  },
   "bin": {
     "i18next-selector-codemod": "./src/bin.ts"
   },
