--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ahrjarrett/i18next-selector.git",
+    "url": "git+https://github.com/ahrjarrett/i18next-selector.git",
     "directory": "packages/vite-plugin"
   },
   "bugs": {
