--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -45,11 +45,13 @@
   },
   "devDependencies": {
     "@prettier/sync": "^0.6.1",
+    "@types/js-yaml": "^4.0.9",
     "vite": "^6.3.5"
   },
   "dependencies": {
     "@traversable/json": "^0.0.26",
-    "@traversable/registry": "^0.0.25"
+    "@traversable/registry": "^0.0.25",
+    "js-yaml": "^4.1.0"
   },
   "peerDependencies": {
     "vite": "6 - 7"
